# smoke

./: .gitignore  CMakeLists.txt  FormatStrings.md  README.md  pong.mal  test.sm  test_runner.py  wordle.mal
c64/: README.md  compiler.mal  compiler.sm  functions.mal  functions.sm  main.mal  main.sm  quicksort.mal  scanner.mal  scanner.sm  test.bas  vm.mal  vm.sm
c64/tests/: abs.bas  and.bas  asc.bas  bf.bas  chr.bas  cos.bas  data.bas  data2.bas  fn1.bas
samples/: pong.sm  wordle.sm
src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  core.inc  debug.c  debug.h  format.c  format.h  main.c  makefile  memory.c  memory.h  object.c  object.h  quicksort.c  quicksort.h  scanner.c  scanner.h  table.c  table.h  test_table.c  value.c  value.h  vm.c  vm.h
src/native/: conio.c  conio.h  console.c  console.h  date.c  date.h  fileio.c  fileio.h  filesys.c  filesys.h  jsonparse.c  jsonparse.h  list.c  list.h  mathmod.c  mathmod.h  native.h  stringutil.c  stringutil.h
src/sqlite3/: sql.h  sqlNative.c
tst/: anon.sm  args.sm  assignment.sm  bf.mal  binary.mal  boundscheck.sm  class.mal  closures.mal  closures.sm  comparison.sm  dates.mal  dates.sm  decrement.mal  enum.mal  escapechar.sm  fib.mal  filter.mal  for.mal  format.mal  format.sm  functions.mal  functions.sm  hashtable.sm  if.mal  if.sm  inc.mal  inc.sm  inc1.mal  inc1.sm  inc2.sm  increment.mal  increment.sm  interpolation.mal  listadd.mal  lists.mal  lists.sm  loop.mal  loop.sm  minusequals.sm  module.mal  (+33 more)
tst/benchmark/: fib.sm  joinbench.mal  joinbench.sm  listbench.mal  listbench.sm  sqlbench.sm  zoo.mal
tst/error/: const_global.sm  const_local.mal  const_local.sm  dec_string.mal  dec_string.sm  inc_string.mal  inc_string.sm  plus_equal_invalid_types.sm  shovel_not_a_list.mal  shovel_not_a_list.sm  var_global.mal  var_global.sm
tst/jsonparse/: jsonparse.sm  test2.json
